Fix IDEA breaking build >:|